# mujoco_drones

./: .clang-tidy  CMakeLists.txt  README.md  build.sh  run.sh
.github/workflows/: ci.yml
include/: controller.h  types.h  viewer.h
include/foxglove/: base64.h  foxglove.h  proto.h  serialize.h  sha1.h  ws.h
include/sensors/: noise.h  sensor_types.h  sensors.h
include/transport/: transport.h  transport_renoir.h
meshes/: propeller_ccw.stl  propeller_cw.stl
model/: environment.xml  hummingbird.xml  scene.xml
src/: controller.c  controller.h  main.c  setpoint.h  types.h  viewer.c  viewer.h
src/foxglove/: base64.c  bridge.c  foxglove.c  foxglove.h  proto.c  serialize.c  sha1.c  ws.c
src/sensors/: sensors.c  sensors.h
src/transport/: transport_renoir.c  transport_renoir.h
